Fix: UIChange/display

--- a/public/display.html
+++ b/public/display.html
@@ -8,29 +8,43 @@
   <link rel="stylesheet" href="/css/display.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
+  
+  <!-- 画像プリロード -->
+  <link rel="preload" as="image" href="/images/qr-code.png">
+  <link rel="preload" as="image" href="/images/backgrounds/main-bg.jpg">
+  <link rel="preload" as="image" href="/images/quiz-images/quiz1_question.png">
+  <link rel="preload" as="image" href="/images/quiz-images/quiz2_question.png">
+  <link rel="preload" as="image" href="/images/quiz-images/quiz3_option1.jpg">
+  <link rel="preload" as="image" href="/images/quiz-images/quiz3_option2.JPG">
+  <link rel="preload" as="image" href="/images/quiz-images/quiz3_option3.JPG">
+  <link rel="preload" as="image" href="/images/quiz-images/quiz3_option4.jpg">
+  <link rel="preload" as="image" href="/images/quiz-images/quiz4_option1.png">
+  <link rel="preload" as="image" href="/images/quiz-images/quiz4_option2.png">
+  <link rel="preload" as="image" href="/images/quiz-images/quiz4_option3.png">
+  <link rel="preload" as="image" href="/images/quiz-images/quiz4_option4.png">
 </head>
 <body>
+  <!-- ホームに戻るボタン：画面右上に配置 -->
+  <button id="home-button" class="home-button">
+    ホームに戻る
+  </button>
+
+  <!-- タイマー表示：固定位置 -->
+  <div id="floating-timer" class="floating-timer hidden">
+    <span id="floating-timer-value">30</span><span class="timer-unit">秒</span>
+  </div>
+  
   <div id="app">
     <!-- メイン画面コンテナ -->
     <div class="main-display">
-      <!-- ホームに戻るボタン (ブラウザ右上に配置) -->
-      <button id="home-button" class="home-button">
-        ホームに戻る
-      </button>
-      
-      <!-- タイマー表示 (白い範囲の右上に配置) -->
-      <div id="timer-display" class="timer-display hidden">
-        <span id="timer-value">30</span>
-      </div>
-    
       <!-- QRコード表示画面 -->
       <div id="welcome-screen" class="screen">
         <div class="content">
           <h1>結婚式クイズ大会</h1>
           <div class="qr-section">
             <div class="qr-code">
-              <img id="qr-code-image" src="/images/qr-code.png" alt="参加用QRコード">
+              <img src="/images/qr-code.png" alt="参加用QRコード">
             </div>
             <p class="qr-instruction">こちらのQRコードをスキャンして参加してください</p>
           </div>
@@ -71,6 +85,9 @@
             <div id="options-container" class="options-container">
               <!-- 選択肢がここに表示されます -->
             </div>
+          </div>
+          <div class="timer screen-timer">
+            <span id="timer-value">30</span>秒
           </div>
         </div>
       </div>
