Fix: UIChange/display

--- a/public/display.html
+++ b/public/display.html
@@ -30,7 +30,7 @@
     ホームに戻る
   </button>
 
-  <!-- タイマー表示：固定位置 -->
+  <!-- タイマー表示：固定位置（右上のみ） -->
   <div id="floating-timer" class="floating-timer hidden">
     <span id="floating-timer-value">30</span><span class="timer-unit">秒</span>
   </div>
@@ -86,9 +86,7 @@
               <!-- 選択肢がここに表示されます -->
             </div>
           </div>
-          <div class="timer screen-timer">
-            <span id="timer-value">30</span>秒
-          </div>
+          <!-- 下部のタイマーは削除 -->
         </div>
       </div>
       
