--- a/public/display.html
+++ b/public/display.html
@@ -1,3 +1,4 @@
+<!-- public/display.html -->
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -41,7 +42,7 @@
       <!-- QRコード表示画面 -->
       <div id="welcome-screen" class="screen">
         <div class="content">
-          <h1>結婚式クイズ大会</h1>
+          <h1>クイズ大会</h1>
           <div class="qr-section">
             <div class="qr-code">
               <img src="/images/qr-code.png" alt="参加用QRコード">
