Fix: UIChange/player13

--- a/public/player.html
+++ b/public/player.html
@@ -1,4 +1,3 @@
-<!-- public/player.html -->
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -147,6 +146,11 @@
     <!-- 結果画面 -->
     <div id="result-screen" class="screen hidden">
       <div class="content">
+        <!-- 上位入賞者のみ表示される大きな順位表示 -->
+        <div id="top-rank-display" class="top-rank-display hidden">
+          <span id="rank-number">-</span>位
+        </div>
+        
         <h2>結果発表</h2>
         <div class="result-details">
           <div class="result-card">
@@ -164,13 +168,7 @@
                 <p class="result-value"><span id="total-time">0</span>秒</p>
               </div>
             </div>
-            <div class="result-item">
-              <span class="material-symbols-rounded icon">emoji_events</span>
-              <div>
-                <p class="result-label">あなたの順位</p>
-                <p class="result-value"><span id="player-rank">-</span>位</p>
-              </div>
-            </div>
+            <!-- 「あなたの順位」表示を削除 -->
           </div>
         </div>
         <div id="ranking-position" class="ranking-position">
