--- a/public/player.html
+++ b/public/player.html
@@ -83,6 +83,9 @@
           </div>
         </div>
         <div class="question-text" id="question-text">問題文がここに表示されます</div>
+        <div id="player-question-image" class="player-question-image hidden">
+          <img src="" alt="問題画像">
+        </div>
         <div class="options">
           <div id="options-container" class="options-container">
             <!-- 選択肢がここに表示されます -->
@@ -121,6 +124,9 @@
         </div>
         <div id="answer-options-container" class="answer-options-container">
           <!-- 答え合わせ選択肢がここに表示されます -->
+        </div>
+        <div id="player-answer-image" class="player-answer-image hidden">
+          <img src="" alt="解答画像">
         </div>
         <div class="answer-note">
           <p id="answer-note-text"></p>
