--- a/public/player.html
+++ b/public/player.html
@@ -27,6 +27,11 @@
             参加する
           </button>
         </div>
+        <!-- 新規追加：手作りアプリの説明 -->
+        <div class="player-handmade-notice">
+          <span class="material-symbols-rounded heart-icon">favorite</span>
+          <p>このクイズは、新郎が皆さんに楽しんでいただけるようこだわってプログラミングで自作した世界に一つだけのアプリです</p>
+        </div>
       </div>
     </div>
     
