--- a/public/display.html
+++ b/public/display.html
@@ -52,6 +52,10 @@
           <div class="participants">
             <p>参加者数: <span id="participant-count">0</span>/39</p>
           </div>
+          <!-- 新規追加：手作りアプリの説明 -->
+          <div class="handmade-app-notice">
+            <p>このクイズは、新郎が皆さんに楽しんでいただけるよう<br>こだわってプログラミングで自作した世界に一つだけのアプリです</p>
+          </div>
         </div>
       </div>
       
