--- a/public/display.html
+++ b/public/display.html
@@ -55,7 +55,7 @@
             <div class="qr-info-right">
               <p class="qr-instruction">←こちらのQRコードをスキャンして参加してください</p>
               <div class="participants">
-                <p>参加者数: <span id="participant-count">0</span>/39</p>
+                <p>参加者数: <span id="participant-count">0/39</span></p>
               </div>
               <div class="handmade-app-notice">
                 <p>このクイズは、新郎が皆さんに楽しんでいただけるよう<br>こだわってプログラミングで自作した世界に一つだけのアプリです</p>
