--- a/public/admin.html
+++ b/public/admin.html
@@ -39,6 +39,9 @@
           <button id="quiz5-option2" class="option-button">新婦が勝利</button>
         </div>
         <p class="quiz5-status" id="quiz5-status"></p>
+        <div class="quiz5-instruction">
+          <p>実践終了後、勝者を選択してから「次へ」ボタンを押してください</p>
+        </div>
       </div>
       
       <!-- ナビゲーションボタン -->
