--- a/public/display.html
+++ b/public/display.html
@@ -110,7 +110,25 @@
           <p id="answer-explanation" class="explanation">解説がここに表示されます</p>
         </div>
       </div>
-      
+
+      <!-- クイズ実践待機画面（問題5用） -->
+      <div id="quiz-practice-screen" class="screen hidden">
+        <div class="content">
+          <h1>ストップウォッチ実践</h1>
+          <div class="practice-instruction">
+            <p>15秒に近く止められるのはどちら？</p>
+            <p>ただいま実践中です...</p>
+          </div>
+          <div class="stopwatch-visual">
+            <div class="stopwatch-icon">
+              <div class="stopwatch-circle"></div>
+              <div class="stopwatch-button"></div>
+            </div>
+            <div class="stopwatch-hand"></div>
+          </div>
+        </div>
+      </div>
+            
       <!-- ランキング画面 -->
       <div id="ranking-screen" class="screen hidden">
         <div class="content">
