--- a/public/player.html
+++ b/public/player.html
@@ -164,8 +164,10 @@
         <h2>ストップウォッチ実践中</h2>
         <div class="practice-animation">
           <div class="stopwatch-container">
-            <span class="material-symbols-rounded stopwatch-icon">timer</span>
-            <div class="stopwatch-animation"></div>
+            <div class="stopwatch-wrapper">
+              <span class="material-symbols-rounded stopwatch-icon">timer</span>
+              <div class="stopwatch-animation"></div>
+            </div>
           </div>
         </div>
         <p class="practice-text">15秒に近づけるチャレンジ実施中です...</p>
