--- a/public/player.html
+++ b/public/player.html
@@ -79,6 +79,13 @@
     <!-- クイズ説明画面 -->
     <div id="explanation-screen" class="screen hidden">
       <div class="content">
+        <!-- 登録完了メッセージを追加 -->
+        <div class="registration-success">
+          <span class="material-symbols-rounded success-icon">check_circle</span>
+          <h2>登録完了！</h2>
+          <p>下記ルールを読んでお待ちください</p>
+        </div>
+        
         <h1>クイズ大会</h1>
         <div class="explanation-card">
           <div class="explanation-item">
