--- a/public/display.html
+++ b/public/display.html
@@ -55,7 +55,7 @@
             <div class="qr-info-right">
               <p class="qr-instruction">←こちらのQRコードをスキャンして参加してください</p>
               <div class="handmade-app-notice">
-                <p>このクイズは、新郎が皆さんに楽しんでいただけるよう<br>こだわってプログラミングで自作した世界に一つだけのアプリです</p>
+                <p>このクイズは、新郎が皆さんに楽しんでいただけるよう<br>こだわってプログラミングで自作した<br>世界に1つだけのアプリです<br>楽しんでいただけたら嬉しいです</p>
               </div>
             </div>
           </div>
@@ -69,7 +69,7 @@
           <div class="explanation">
             <p>これから5問の問題を出します。</p>
             <p>それぞれの問題の解答時間は30秒です。</p>
-            <p>結果は正答数と速さの二点で順位が決まります。</p>
+            <p>結果は正答数と正解した問題の回答時間の2点で順位が決まります。</p>
             <p>一度ボタンを押したら戻れないので注意！</p>
           </div>
         </div>
