--- a/public/admin.html
+++ b/public/admin.html
@@ -33,14 +33,14 @@
       <!-- クイズ5の設定パネル（問題5の時だけ表示） -->
       <div id="quiz5-panel" class="quiz5-panel hidden">
         <h3>問題5の答えを設定</h3>
-        <p>ストップウォッチの結果を選択してください</p>
+        <p>ストップウォッチの実践結果を選択してください</p>
         <div class="quiz5-options">
           <button id="quiz5-option1" class="option-button">新郎が勝利</button>
           <button id="quiz5-option2" class="option-button">新婦が勝利</button>
         </div>
-        <p class="quiz5-status" id="quiz5-status"></p>
+        <p class="quiz5-status" id="quiz5-status">実践終了後、勝者を選択してください</p>
         <div class="quiz5-instruction">
-          <p>実践終了後、勝者を選択してから「次へ」ボタンを押してください</p>
+          <p><strong>注意</strong>: 勝者を選択してから「次へ」ボタンを押してください</p>
         </div>
       </div>
       
