--- a/public/display.html
+++ b/public/display.html
@@ -124,6 +124,17 @@
           </div>
         </div>
       </div>
+
+      <!-- ランキング準備画面 -->
+      <div id="ranking-intro-screen" class="screen hidden">
+        <div class="content">
+          <h1>ランキング発表</h1>
+          <div class="ranking-intro-message">
+            <p>皆様のご参加ありがとうございました！</p>
+            <p>上位入賞者を発表します</p>
+          </div>
+        </div>
+      </div>
             
       <!-- ランキング画面 -->
       <div id="ranking-screen" class="screen hidden">
