--- a/public/player.html
+++ b/public/player.html
@@ -239,7 +239,7 @@
             <div class="result-item">
               <span class="material-symbols-rounded icon">timer</span>
               <div>
-                <p class="result-label">正解した問題の合計回答時間</p>
+                <p class="result-label">合計回答時間</p>
                 <p class="result-value"><span id="total-time">0</span>秒</p>
               </div>
             </div>
