--- a/public/display.html
+++ b/public/display.html
@@ -10,6 +10,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
+  <script src="/js/socket-manager.js"></script>
+  <link rel="stylesheet" href="/css/connection-status.css">
   
   <!-- 画像プリロード -->
   <link rel="preload" as="image" href="/images/qr-code.png">
