--- a/public/player.html
+++ b/public/player.html
@@ -11,6 +11,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
   <!-- アイコン -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0">
+  <script src="/js/socket-manager.js"></script>
+  <link rel="stylesheet" href="/css/connection-status.css">
 </head>
 
 <body>
