--- a/public/admin.html
+++ b/public/admin.html
@@ -7,6 +7,9 @@
   <title>結婚式クイズ大会 - 管理画面</title>
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="/css/admin.css">
+  <link rel="stylesheet" href="/css/connection-status.css">
+  <script src="/js/socket-manager.js"></script>
+
 </head>
 <body>
   <div id="app">
