--- a/public/admin.html
+++ b/public/admin.html
@@ -1,4 +1,3 @@
-<!-- public/admin.html -->
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -8,8 +7,12 @@
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="/css/admin.css">
   <link rel="stylesheet" href="/css/connection-status.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
+  
+  <!-- 新規追加: Socket.io接続管理 -->
   <script src="/js/socket-manager.js"></script>
-
 </head>
 <body>
   <div id="app">
