--- a/public/display.html
+++ b/public/display.html
@@ -1,4 +1,3 @@
-<!-- public/display.html -->
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -7,10 +6,13 @@
   <title>結婚式クイズ大会 - メイン画面</title>
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="/css/display.css">
+  <link rel="stylesheet" href="/css/connection-status.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/css/connection-status.css">
+  
+  <!-- 新規追加: Socket.io接続管理 -->
+  <script src="/js/socket-manager.js"></script>
   
   <!-- 画像プリロード -->
   <link rel="preload" as="image" href="/images/qr-code.png">
@@ -25,8 +27,6 @@
   <link rel="preload" as="image" href="/images/quiz-images/quiz4_option2.png">
   <link rel="preload" as="image" href="/images/quiz-images/quiz4_option3.png">
   <link rel="preload" as="image" href="/images/quiz-images/quiz4_option4.png">
-
-  <script src="/js/socket-manager.js"></script>
 </head>
 <body>
   <!-- ホームに戻るボタン：画面右上に配置 -->
@@ -150,7 +150,7 @@
       </div>
     </div>
   </div>
-
+  
   <script src="/socket.io/socket.io.js"></script>
   <script src="/js/display.js"></script>
 </body>
