--- a/public/player.html
+++ b/public/player.html
@@ -6,12 +6,14 @@
   <title>結婚式クイズ大会 - 参加者画面</title>
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="/css/player.css">
+  <link rel="stylesheet" href="/css/connection-status.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
   <!-- アイコン -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0">
-  <link rel="stylesheet" href="/css/connection-status.css">
+  
+  <!-- 新規追加: Socket.io接続管理 -->
   <script src="/js/socket-manager.js"></script>
 </head>
 
@@ -253,7 +255,7 @@
       </div>
     </div>
   </div>
-
+  
   <script src="/socket.io/socket.io.js"></script>
   <script src="/js/player.js"></script>
 </body>
