--- a/public/player.html
+++ b/public/player.html
@@ -64,7 +64,7 @@
             </div>
           </div>
           
-          <input type="text" id="player-name" placeholder="お名前を入力してください" maxlength="30">
+          <input type="text" id="player-name" placeholder="フルネームを入力してください" maxlength="30">
           
           <button id="register-button" class="primary-button">
             <span class="material-symbols-rounded">login</span>
@@ -217,7 +217,7 @@
         <p class="waiting-text">ランキングの発表をお待ちください...</p>
         <div class="quiz-summary">
           <p>正答数: <span id="waiting-correct-count">0</span>/5問</p>
-          <p>正解した問題の合計回答時間: <span id="waiting-total-time">0</span>秒</p>
+          <p>回答時間(正解): <span id="waiting-total-time">0</span>秒</p>
         </div>
       </div>
     </div>
@@ -243,7 +243,7 @@
             <div class="result-item">
               <span class="material-symbols-rounded icon">timer</span>
               <div>
-                <p class="result-label">合計回答時間</p>
+                <p class="result-label">回答時間(正解)</p>
                 <p class="result-value"><span id="total-time">0</span>秒</p>
               </div>
             </div>
